--- a/form.html
+++ b/form.html
@@ -13,23 +13,27 @@
 
 <body>
 <h1 id="text">Data form</h1>
-<form id="details">
-    FirstName:
-    <label><input type="text" id="firstName" value="sandhia" /> </label>
+<form class="details">
+    <p>FirstName:</p>
+    <label><input type="text" id="firstName" name="firstName" /> </label>
     <br>
-    LastName:
-    <label><input type="text" id="lastName" value="M" /> </label>
+    <p>LastName:</p>
+    <label><input type="text" id="lastName" name="lastName"/> </label>
     <br>
     <input type="submit">
 </form>
 <p>If you click the "Submit" button, the form will be sent to a page
+    <script>
+        const fName = document.getElementById("firstName");
+        const lName = document.getElementById("lastName");
+        document.querySelector('.details').addEventListener('submit', function (e) {
+            e.preventDefault();
+            console.log(fName.value);
+            console.log(lName.value);
+        });
+
+    </script>
 </body>
-<script>
-    const formDetails = document.getElementById("details");
-    const fName = document.getElementById("firstName").value;
-    const lName = document.getElementById("lastName").value;
-    console.log("First Name=" + fName);
-    console.log("Last Name=" + lName);
-</script>
+
 </html>
 
